# gba-emulator

./: .gitignore  Cargo.toml  README.md  TODO.md
gba_core/: Cargo.toml  build.rs
gba_core/src/: bus.rs  dma.rs  gba.rs  interrupt.rs  io.rs  keypad.rs  lib.rs  mem.rs  rom.rs  scheduler.rs  timer.rs  util.rs
gba_core/src/apu/: mod.rs  registers.rs
gba_core/src/apu/channel/: dma.rs  mod.rs  noise.rs  tone.rs  wave.rs
gba_core/src/backup/: mod.rs
gba_core/src/cartridge/: game_db.rs  mod.rs  rom.rs
gba_core/src/cartridge/backup/: eeprom.rs  flash.rs  mod.rs
gba_core/src/cartridge/gpio/: mod.rs  rtc.rs
gba_core/src/cpu/: alu.rs  arm.rs  cond.rs  exception.rs  mod.rs  psr.rs  thumb.rs
gba_core/src/ppu/: color.rs  mod.rs  registers.rs
gba_core/src/ppu/render/: backgrounds.rs  bitmap.rs  compose.rs  mod.rs  objects.rs
gba_ui/: Cargo.toml
gba_ui/src/: main.rs
gba_ui_minifb/: Cargo.toml
gba_ui_minifb/src/: main.rs
gba_ui_sdl2/: Cargo.toml
gba_ui_sdl2/src/: main.rs
ui/: Cargo.toml
ui/src/: main.rs
