[package]
name = "gba_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit = "0.1.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"

[build-dependencies]
bit = "0.1.1"